--- a/index.html
+++ b/index.html
@@ -514,9 +514,25 @@
           <div class="col-lg-6">
             <h3 class="resume-title">Licenses & Certifications</h3>
 
+            <!-- <div class="resume-item">
+              <h5><a href="#"></a></h5>
+            </div>
+
+            <div class="resume-item">
+              <h5><a href="#"></a></h5>
+            </div>
+
+            <div class="resume-item">
+              <h5><a href="#"></a></h5>
+            </div>
+
+            <div class="resume-item">
+              <h5><a href="#"></a></h5>
+            </div> -->
+
             <div class="resume-item">
               <!-- <a href="#aws-ccp"> -->
-                <h5><a href="#">AWS Certified Solutions Architect Associate</a></h5>
+              <h5><a href="#">AWS Certified Solutions Architect Associate</a></h5>
               <!-- </a>
               <h5>April 2024</h5>
               <p><em>Amazon Web Service (AWS)</em></p> -->
@@ -526,7 +542,7 @@
               <a href="#aws-ccp">
                 <h5>FGA Cloud Architecting</h5>
               </a>
-               <!--<h5>April 2024</h5>
+              <!--<h5>April 2024</h5>
               <p><em>DTS Kominfo</em></p> -->
             </div>
 
@@ -541,7 +557,7 @@
             <div class="resume-item">
               <a href="#prakerja">
                 <h5>Pengembangan Jaringan Komputer dengan Mikrotik</h5>
-               </a>
+              </a>
               <!--<h5>June 2023</h5>
               <p><em>Kartu Prakerja | Karir.mu</em></p> -->
             </div>
@@ -779,8 +795,8 @@
               <div class=" portfolio-info">
                 <h4>Breast Cancer (MLOPS)</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/mlops-breast-cancer/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
+                  <a href="https://maulanakavaldo.github.io/mlops-breast-cancer/" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -798,28 +814,28 @@
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dicoding/sentiment-analysis-shopee.webp" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>Sentiment Analysis Shopee App</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/sentiment-analysis/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
+                  <a href="https://maulanakavaldo.github.io/sentiment-analysis/" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
-          
+
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dicoding/fruits-classification.webp" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>Fruits Classification</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/fruits-classification/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
-                      class="bx bx-link"></i></a>
+                  <a href="https://maulanakavaldo.github.io/fruits-classification/" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
             </div>
@@ -831,7 +847,8 @@
               <div class=" portfolio-info">
                 <h4>Movie Recommendation System</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
                       class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -844,7 +861,8 @@
               <div class=" portfolio-info">
                 <h4>Car Price Prediction</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/" class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
+                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/"
+                    class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
                       class="bx bx-link"></i></a>
                 </div>
               </div>
