--- a/index.html
+++ b/index.html
@@ -492,126 +492,90 @@
 
             <!-- <div class="resume-item">
               <h5><a href="#"></a></h5>
-            </div>
+            </div> -->
 
-            <div class="resume-item">
-              <h5><a href="#"></a></h5>
-            </div>
-
-            <div class="resume-item">
-              <h5><a href="#"></a></h5>
-            </div>
-
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h5><a href="#"></a></h5>
             </div> -->
 
             <div class="resume-item">
-              <!-- <a href="#aws-ccp"> -->
-              <h5><a href="#">AWS Certified Solutions Architect Associate</a></h5>
-              <!-- </a>
-              <h5>April 2024</h5>
-              <p><em>Amazon Web Service (AWS)</em></p> -->
+              <h5><a href="#">AWS Certified Solutions Architect Associate (SAA)</a></h5>
+              <!-- <p>April 2024</p> -->
             </div>
 
             <div class="resume-item">
               <a href="#aws-ccp">
-                <h5>FGA Cloud Architecting</h5>
+                <h5>AWS Certified Cloud Practitioner (CCP)</h5>
               </a>
-              <!--<h5>April 2024</h5>
-              <p><em>DTS Kominfo</em></p> -->
-            </div>
-
-            <div class="resume-item">
-              <a href="#aws-ccp">
-                <h5>AWS Certified Cloud Practitioner</h5>
-              </a>
-              <!-- <h5>June 2023</h5>
-              <p><em>Amazon Web Service (AWS)</em></p> -->
-            </div>
-
-            <div class="resume-item">
-              <a href="#prakerja">
-                <h5>Pengembangan Jaringan Komputer dengan Mikrotik</h5>
-              </a>
-              <!--<h5>June 2023</h5>
-              <p><em>Kartu Prakerja | Karir.mu</em></p> -->
-            </div>
-
-            <div class="resume-item">
-              <a href="#">
-                <h5>Analisis Data Marketing Menggunakan Google Sheet</h5>
-              </a>
-              <!-- <h5>June 2023</h5>
-              <p><em>Kartu Prakerja | Rumah Siap Kerja</em></p> -->
+              <!-- <h5>June 2023</h5> -->
             </div>
 
             <div class="resume-item">
               <a href="#">
                 <h5>PROA: Google Cloud Fundamental</h5>
               </a>
-              <!-- <h5>May 2023</h5>
-              <p><em>DTS KOMINFO | Google</em></p> -->
+              <!-- <h5>May 2023</h5>-->
             </div>
 
             <div class="resume-item">
-              <a href="#aca-alibaba">
-                <h5>ACA: Alibaba Cloud Security</h5>
+              <a href="#aws-ccp">
+                <h5>FGA: Cloud Architecting (AWS)</h5>
               </a>
-              <!-- <h5>Mart 2023</h5>
-              <p><em>Alibaba Cloud</em></p> -->
+              <!--<h5>April 2024</h5>-->
             </div>
 
             <div class="resume-item">
-              <!-- <a href="#fga" data-gallery="portfolioGallery" class="portfolio-lightbox" ><h4>FGA: Data Science <span>&nbsp;</span><span class="bx bx-link"></span></h4></a> -->
+                <h5><a href="#">Alibaba Cloud Associate: Cloud Security</a></h5>
+              <!-- <h5>Mart 2023</h5>-->
+            </div>
+
+            <div class="resume-item">
               <a href="#fga">
                 <h5>FGA: Data Science</h5>
               </a>
-              <!-- <a href="assets/img/certif_licen/fga_ds2.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox"></a>
-              <a href="assets/img/certif_licen/fga_ds3.png" data-gallery="portfolioGallery"
-                class="portfolio-lightbox"></a>
-              <h5>October 2022</h5>
-              <p><em>DTS KOMINFO | Binar Academy</em></p> -->
             </div>
 
             <div class="resume-item">
               <a href="assets/img/certif_licen/xlfl.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <h5>XL Axiata Future LEaders</h5>
+                <h5>XL Axiata Future Leaders (Future Skills Fisipol UGM)</h5>
               </a>
-              <!-- <h5>Januari 2021</h5>
-              <p><em>Future Skills Fisipol Universitas Gadjah Mada</em></p> -->
+              <!-- <h5>Januari 2021</h5> -->
             </div>
 
             <div class="resume-item">
               <a href="#dqlab">
-                <h5>Data science with Python, MySQL, R</h5>
+                <h5>Data science with Python, MySQL, R (DQLab)</h5>
               </a>
-              <!-- <h5>Januari 2020</h5> -->
-              <!-- <p><em>DQLab - Course</em></p> -->
-              <!-- <ul>
-                  <li> </li>
-               </ul> -->
             </div>
 
             <div class="resume-item">
               <a href="#hackerrank">
-                <h5>Programming Language Python, SQL</h5>
+                <h5>Programming Language Python, SQL (Hackerrank)</h5>
               </a>
-              <!-- <h5></h5> -->
-              <!-- <p><em>Hackerrank <br>
-              </p> -->
             </div>
 
             <div class="resume-item">
               <a href="#msword">
-                <h5>Microsoft Office Specialist</h5>
+                <h5>Microsoft Office Specialist (Word)</h5>
               </a>
               <!-- <h5>April 2019</h5>
               <p><em>MOS: Microsoft Office Word 2013 <br>
                   Score: 963/1000</em>
               </p> -->
             </div>
+
+            <div class="resume-item">
+                <h5><a href="#prakerja">Pengembangan Jaringan Komputer dengan Mikrotik (Karir.mu)</a></h5>
+              <!--<h5>June 2023</h5> -->
+            </div>
+
+            <div class="resume-item">
+              <a href="#">
+                <h5>Analisis Data Marketing Menggunakan Google Sheet (Rumah Siap Kerja)</h5>
+              </a>
+              <!-- <h5>June 2023</h5> -->
+            </div>
+
           </div>
 
           <div class="col-lg-12">
@@ -624,7 +588,7 @@
                 <a href="https://www.dicoding.com/users/mkavaldo/academies" target="_blank">Data Scientist</a>
                 and
                 <a href="https://www.dicoding.com/learningpaths/600" target="_blank">Machine Learning Engineer</a>.
-                Visit <a href="https://www.dicoding.com/users/mkavaldo/academies" target="_blank"> my profile</a>
+                Visit <a href="https://www.dicoding.com/users/mkavaldo/academies" target="_blank"> my profile.</a>
               </p>
               <p>As an External Code Reviewer, my responsibility:</p>
               <ul>
@@ -1842,7 +1806,7 @@
   </footer>
   <!-- End Footer -->
 
-  <!-- <div id="preloader"></div> -->
+  <div id="preloader"></div>
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i
       class="bi bi-arrow-up-short"></i></a>
 
