--- a/index.html
+++ b/index.html
@@ -494,85 +494,52 @@
               <h5><a href="#"></a></h5>
             </div> -->
 
-            <!-- <div class="resume-item">
-              <h5><a href="#"></a></h5>
-            </div> -->
-
             <div class="resume-item">
-              <h5><a href="#">AWS Certified Solutions Architect Associate (SAA)</a></h5>
-              <!-- <p>April 2024</p> -->
+              <h4><a href="">AWS Certificate (CCP, SAA)</a></h4>
             </div>
 
             <div class="resume-item">
-              <a href="#aws-ccp">
-                <h5>AWS Certified Cloud Practitioner (CCP)</h5>
-              </a>
-              <!-- <h5>June 2023</h5> -->
+              <h4><a href="">Alibaba Cloud Certificate (CC, BD, CS)</a></h4>
             </div>
 
             <div class="resume-item">
-              <a href="#">
-                <h5>PROA: Google Cloud Fundamental</h5>
-              </a>
-              <!-- <h5>May 2023</h5>-->
-            </div>
-
-            <div class="resume-item">
-              <a href="#aws-ccp">
-                <h5>FGA: Cloud Architecting (AWS)</h5>
-              </a>
-              <!--<h5>April 2024</h5>-->
-            </div>
-
-            <div class="resume-item">
-                <h5><a href="#">Alibaba Cloud Associate: Cloud Security</a></h5>
-              <!-- <h5>Mart 2023</h5>-->
-            </div>
-
-            <div class="resume-item">
-              <a href="#fga">
-                <h5>FGA: Data Science</h5>
-              </a>
+              <h4><a href="">DTS Kominfo Certificate</a></h4>
+              <ul>
+                <li>FGA: Become Elite Cloud Engineer (Elite Academy) - Present</li>
+                <li>FGA: Cloud Architecting (AWS) - April 2024</li>
+                <li>PROA: Google Cloud Fundamental (Google) - May 2023</li>
+                <li>FGA: Data Science (Binar Academy) - October 2023</li>
+              </ul>
             </div>
 
             <div class="resume-item">
               <a href="assets/img/certif_licen/xlfl.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox">
-                <h5>XL Axiata Future Leaders (Future Skills Fisipol UGM)</h5>
+                <h4>XL Axiata Future Leaders (Future Skills Fisipol UGM)</h4>
               </a>
               <!-- <h5>Januari 2021</h5> -->
             </div>
 
             <div class="resume-item">
-              <a href="#dqlab">
-                <h5>Data science with Python, MySQL, R (DQLab)</h5>
-              </a>
+                <h4><a href="#dqlab">Data science with Python, MySQL, R (DQLab)</a></h4>
             </div>
 
             <div class="resume-item">
-              <a href="#hackerrank">
-                <h5>Programming Language Python, SQL (Hackerrank)</h5>
-              </a>
+              
+                <h4><a href="#hackerrank">Hackerrank Certificate (Python & SQL)</a></h4>
+              
             </div>
 
             <div class="resume-item">
-              <a href="#msword">
-                <h5>Microsoft Office Specialist (Word)</h5>
-              </a>
-              <!-- <h5>April 2019</h5>
-              <p><em>MOS: Microsoft Office Word 2013 <br>
-                  Score: 963/1000</em>
-              </p> -->
+                <h4><a href="#msword">Microsoft Office Specialist (Word 2019 - 963/1000)</a></h4>
             </div>
 
             <div class="resume-item">
-                <h5><a href="#prakerja">Pengembangan Jaringan Komputer dengan Mikrotik (Karir.mu)</a></h5>
+              <h4><a href="#prakerja">Pengembangan Jaringan Komputer dengan Mikrotik (Karir.mu)</a></h4>
               <!--<h5>June 2023</h5> -->
             </div>
 
             <div class="resume-item">
-              <a href="#">
-                <h5>Analisis Data Marketing Menggunakan Google Sheet (Rumah Siap Kerja)</h5>
-              </a>
+                <h4><a href="#prakerja">Analisis Data Marketing Menggunakan Google Sheet (Rumah Siap Kerja)</a></h4>
               <!-- <h5>June 2023</h5> -->
             </div>
 
