--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -168,7 +168,7 @@
               is expected that
               most of important events in the city could be detected via monitoring these data.
             </p> <iframe
-              src="https://maulanakavaldo.github.io/dicoding-project/Belajar%20Analisis%20Data%20dengan%20Python/bike-sharing.html"
+              src="https://github.com/maulanakavaldo/bike-sharing/blob/main/bike-sharing.html"
               frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
