--- a/index.html
+++ b/index.html
@@ -549,7 +549,17 @@
             <h3 class="resume-title">Experience</h3>
 
             <div class="resume-item">
-              <h4>Academy Code Review at Dicoding Indonesia</h4>
+              <h4>SOC Analyst</h4>
+              <h5>October 2024 - Present</h5>
+              <p>As an External Code Reviewer, my responsibility:</p>
+              <ul>
+                <li>Installing and configuring endpoint security agents on various devices to ensure they are properly protected and monitored. This includes verifying successful deployment and ensuring the agent is functioning as expected.</li>
+                <li>Diagnose and resolve operating system errors across different platforms. This involves identifying the root cause of system issues, applying fixes or patches, and ensuring stable system performance after the resolution.</li>
+              </ul>
+            </div>
+
+            <div class="resume-item">
+              <h4>External Reviewer at Dicoding Indonesia</h4>
               <h5>June 2024 - Present</h5>
               <p>Learning Path:
                 <a href="https://www.dicoding.com/users/mkavaldo/academies" target="_blank">Data Scientist</a>
