--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
             <div class="resume-item">
               <h4>SOC Analyst</h4>
               <h5>October 2024 - Present</h5>
-              <p>As an External Code Reviewer, my responsibility:</p>
+              <p>As a SOC Analyst, my responsibility:</p>
               <ul>
                 <li>Installing and configuring endpoint security agents on various devices to ensure they are properly protected and monitored. This includes verifying successful deployment and ensuring the agent is functioning as expected.</li>
                 <li>Diagnose and resolve operating system errors across different platforms. This involves identifying the root cause of system issues, applying fixes or patches, and ensuring stable system performance after the resolution.</li>
