--- a/index.html
+++ b/index.html
@@ -555,6 +555,7 @@
               <ul>
                 <li>Installing and configuring endpoint security agents on various devices to ensure they are properly protected and monitored. This includes verifying successful deployment and ensuring the agent is functioning as expected.</li>
                 <li>Diagnose and resolve operating system errors across different platforms. This involves identifying the root cause of system issues, applying fixes or patches, and ensuring stable system performance after the resolution.</li>
+                <li>Continuously review alerts and logs from the CrowdStrike dashboard to detect, investigate, and respond to potential security incidents. This includes analyzing threat intelligence provided by CrowdStrike, assessing event severity, and taking appropriate actions to mitigate risks effectively.</li>
               </ul>
             </div>
 
