--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
     <div class="container" data-aos="zoom-in" data-aos-delay="100">
       <h1>Maulana Kavaldo</h1>
       <p>I'm <span class="typed"
-          data-typed-items="Fresh Graduate, Jr. Data Scientist, Machine Learning Developer, Cloud Computing Entusiast, Data Engineer"></span>
+          data-typed-items="Jr. Data Scientist, Machine Learning Engineer, Cloud Computing Entusiast"></span>
+          <!-- data-typed-items="Jr. Data Scientist, Machine Learning Engineer, Cloud Computing Entusiast, Jr. Data Engineer"></span> -->
       </p>
       <!-- <p>Universitas Teknologi Yogyakarta</p> -->
       <div class="social-links">
