--- a/index.html
+++ b/index.html
@@ -710,6 +710,19 @@
 
           <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/dicoding/beverage-sales.png" class="img-fluid" alt="">
+              <div class=" portfolio-info">
+                <h4>Beverage Sales (CLustering & CLassification)</h4>
+                <div class="portfolio-links">
+                  <a href="https://maulanakavaldo.github.io/beverage-sales/" class="portfolio-details-lightbox"
+                    data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+          <div class="col-lg-3 col-md-6 portfolio-item filter-ml filter-data">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/dicoding/breast-cancer.webp" class="img-fluid" alt="">
               <div class=" portfolio-info">
                 <h4>Breast Cancer (MLOPS)</h4>
