--- a/index.html
+++ b/index.html
@@ -714,7 +714,7 @@
               <div class=" portfolio-info">
                 <h4>Beverage Sales (CLustering & CLassification)</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/beverage-sales/" class="portfolio-details-lightbox"
+                  <a href="https://mlkav.github.io/beverage-sales/" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -727,7 +727,7 @@
               <div class=" portfolio-info">
                 <h4>Breast Cancer (MLOPS)</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/mlops-breast-cancer/" class="portfolio-details-lightbox"
+                  <a href="https://mlkav.github.io/mlops-breast-cancer/" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -740,7 +740,7 @@
               <div class=" portfolio-info">
                 <h4>Water Potability (MLOPS)</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/mlops-water-pipeline/" class="portfolio-details-lightbox"
+                  <a href="https://mlkav.github.io/mlops-water-pipeline/" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -753,7 +753,7 @@
               <div class=" portfolio-info">
                 <h4>Sentiment Analysis Shopee App</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/sentiment-analysis/" class="portfolio-details-lightbox"
+                  <a href="https://mlkav.github.io/sentiment-analysis/" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -766,7 +766,7 @@
               <div class=" portfolio-info">
                 <h4>Fruits Classification</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/fruits-classification/" class="portfolio-details-lightbox"
+                  <a href="https://mlkav.github.io/fruits-classification/" class="portfolio-details-lightbox"
                     data-glightbox="type: external" title="Show Details"><i class="bx bx-link"></i></a>
                 </div>
               </div>
@@ -779,7 +779,7 @@
               <div class=" portfolio-info">
                 <h4>Movie Recommendation System</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/movie-recommendation-system/"
+                  <a href="https://mlkav.github.io/movie-recommendation-system/"
                     class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
                       class="bx bx-link"></i></a>
                 </div>
@@ -793,7 +793,7 @@
               <div class=" portfolio-info">
                 <h4>Car Price Prediction</h4>
                 <div class="portfolio-links">
-                  <a href="https://maulanakavaldo.github.io/car-price-prediction/"
+                  <a href="https://mlkav.github.io/car-price-prediction/"
                     class="portfolio-details-lightbox" data-glightbox="type: external" title="Show Details"><i
                       class="bx bx-link"></i></a>
                 </div>
