--- a/pages/project-rock-paper-scrissor.html
+++ b/pages/project-rock-paper-scrissor.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+        <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
             <span>Home</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -174,7 +174,7 @@
               interface that allows users to test the model with their own rock, paper, and scissors images.
             </p>
             <iframe
-              src="https://maulanakavaldo.github.io/dicoding-project/Belajar%20Machine%20Learning%20Untuk%20Pemula/MaulanaKavaldo_Submission_RockPaperScissors.html"
+              src="https://mlkav.github.io/dicoding-project/Belajar%20Machine%20Learning%20Untuk%20Pemula/MaulanaKavaldo_Submission_RockPaperScissors.html"
               frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
