--- a/pages/.portfolio-detail.html
+++ b/pages/.portfolio-detail.html
@@ -41,7 +41,7 @@
 
         <nav id="navbar" class="navbar nav-menu">
             <ul>
-                <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i
+                <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i
                             class="bx bx-home"></i>
                         <span>Home</span></a></li>
             </ul>
