--- a/pages/gallery-certificates.html
+++ b/pages/gallery-certificates.html
@@ -61,7 +61,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+        <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
             <span>Home</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
