--- a/pages/project-banjir-jakarta.html
+++ b/pages/project-banjir-jakarta.html
@@ -41,7 +41,7 @@
 
         <nav id="navbar" class="navbar nav-menu">
             <ul>
-                <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i
+                <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i
                             class="bx bx-home"></i>
                         <span>Home</span></a></li>
             </ul>
@@ -150,7 +150,7 @@
                         </p>
 
                         <div id="loading-message" class="center">Loading...</div>
-                        <iframe src="https://maulanakavaldo.github.io/JSC-Data-Science-Trainee/" frameborder="0" style="width: 100%; height: 1000px;"
+                        <iframe src="https://mlkav.github.io/JSC-Data-Science-Trainee/" frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe>
                     </div>
