--- a/pages/project-bike-sharing.html
+++ b/pages/project-bike-sharing.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+        <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
             <span>Home</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -168,7 +168,7 @@
               is expected that
               most of important events in the city could be detected via monitoring these data.
             </p> <iframe
-              src="https://maulanakavaldo.github.io/bike-sharing/bike-sharing.html"
+              src="https://mlkav.github.io/bike-sharing/bike-sharing.html"
               frameborder="0" style="width: 100%; height: 1000px;"></iframe>
           </div>
         </div>
