--- a/pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html
+++ b/pages/project-datacamp-a-visual-history-of-nobel-prize-winners.html
@@ -41,7 +41,7 @@
 
         <nav id="navbar" class="navbar nav-menu">
             <ul>
-                <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i
+                <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i
                             class="bx bx-home"></i>
                         <span>Home</span></a></li>
             </ul>
@@ -128,7 +128,7 @@
                         <h3>Details</h3>
                         <div id="loading-message" class="center">Loading...</div>
                         <iframe
-                            src="https://maulanakavaldo.github.io/DataCamp/A Visual History of Nobel Prize Winners/A Visual History of Nobel Prize Winners.html "
+                            src="https://mlkav.github.io/DataCamp/A Visual History of Nobel Prize Winners/A Visual History of Nobel Prize Winners.html "
                             frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;"></iframe>
                     </div>
