--- a/pages/project-datacamp-investigating-netflix-movies-and-guest-stars-in-the-office.html
+++ b/pages/project-datacamp-investigating-netflix-movies-and-guest-stars-in-the-office.html
@@ -41,7 +41,7 @@
 
         <nav id="navbar" class="navbar nav-menu">
             <ul>
-                <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i
+                <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i
                             class="bx bx-home"></i>
                         <span>Home</span></a></li>
             </ul>
@@ -131,7 +131,7 @@
                         <h3>Details</h3>
                         <div id="loading-message" class="center">Loading...</div>
                         <iframe
-                            src="https://maulanakavaldo.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
+                            src="https://mlkav.github.io/DataCamp/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office/Investigating%20Netflix%20Movies%20and%20Guest%20Stars%20in%20The%20Office.html"
                             frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;"></iframe>
                     </div>
