--- a/pages/project-european-hotel.html
+++ b/pages/project-european-hotel.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+        <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
             <span>Home</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -153,7 +153,7 @@
             </p>
 
             <div id="loading-message" class="center">Loading...</div>
-            <iframe src="https://maulanakavaldo.github.io/Project/Europe%20Hotel%20Booking%20Satisfaction%20Score.html"
+            <iframe src="https://mlkav.github.io/Project/Europe%20Hotel%20Booking%20Satisfaction%20Score.html"
               frameborder="0" style="width: 100%; height: 1000px;"
               onload="document.getElementById('loading-message').hidden = true;">
             </iframe>
