--- a/pages/project-vix-hci.html
+++ b/pages/project-vix-hci.html
@@ -41,7 +41,7 @@
 
     <nav id="navbar" class="navbar nav-menu">
       <ul>
-        <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
+        <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i class="bx bx-home"></i>
             <span>Home</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
@@ -137,7 +137,7 @@
                   <div class="col-3"><strong>Link</strong></div>
                   <div class=""><strong>:</strong>&nbsp;</div>
                   <div class="col-9">
-                    <a href="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
+                    <a href="https://mlkav.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
                       target="_blank">Presentation</a>
                   </div>
                 </li>
@@ -155,13 +155,13 @@
 
             <div id="loading-message" class="center">Loading...</div>
             <iframe
-              src="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.html"
+              src="https://mlkav.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.html"
               frameborder="0" style="width: 100%; height: 1000px;"
               onload="document.getElementById('loading-message').hidden = true;">
             </iframe>
 
             <!-- <iframe
-            src="https://maulanakavaldo.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
+            src="https://mlkav.github.io/Virtual-Internship/Home%20Credit%20Indonesia/Maulana%20Kavaldo%20-%20Home%20Credit%20Indonesia.pdf"
             frameborder="0" style="width: 100%; height: 1000px;"></iframe> -->
           </div>
         </div>
