--- a/pages/project-vix-kalbe-nutritionals.html
+++ b/pages/project-vix-kalbe-nutritionals.html
@@ -41,7 +41,7 @@
 
         <nav id="navbar" class="navbar nav-menu">
             <ul>
-                <li><a href="https://maulanakavaldo.github.io" class="nav-link scrollto active"><i
+                <li><a href="https://mlkav.github.io" class="nav-link scrollto active"><i
                             class="bx bx-home"></i>
                         <span>Home</span></a></li>
             </ul>
@@ -178,7 +178,7 @@
                         </p>
                         <div id="loading-message" class="center">Loading...</div>
                         <iframe
-                            src="https://maulanakavaldo.github.io/Virtual-Internship/Kalbe%20Nutritionals%20-%20Data%20Scientist/vix_kalbe.html"
+                            src="https://mlkav.github.io/Virtual-Internship/Kalbe%20Nutritionals%20-%20Data%20Scientist/vix_kalbe.html"
                             frameborder="0" style="width: 100%; height: 1000px;"
                             onload="document.getElementById('loading-message').hidden = true;">
                         </iframe>
