--- a/index.html
+++ b/index.html
@@ -1703,7 +1703,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Yogyakarta, Indonesia</p>
+                <p>Depok, Indonesia</p>
               </div>
 
               <div class="email">
@@ -1735,7 +1735,7 @@
             </form>
           </div>
 
-          <script>
+          <!-- <script>
             document.addEventListener("DOMContentLoaded", function () {
               const emailInput = document.getElementById("email");
               const messageInput = document.getElementById("message");
@@ -1756,7 +1756,7 @@
                 }
               }
             });
-          </script>
+          </script> -->
 
         </div>
       </div>
