--- a/index.html
+++ b/index.html
@@ -1728,7 +1728,7 @@
                   required></textarea>
               </div>
               <br>
-              <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div>
+              <!-- <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div> -->
               <br><br>
               <div class="text-center"><button type="submit" id="submitButton" class="btn btn-primary" disabled>Send
                   Message</button></div>
