--- a/index.html
+++ b/index.html
@@ -1730,7 +1730,7 @@
               <br>
               <!-- <div class="g-recaptcha" data-sitekey="6LeW20QjAAAAAErWy-YHigEpnA778lyB2lqY7fgm"></div> -->
               <br><br>
-              <div class="text-center"><button type="submit" id="submitButton" class="btn btn-primary" disabled>Send
+              <div class="text-center"><button type="submit" id="submitButton" class="btn btn-primary">Send
                   Message</button></div>
             </form>
           </div>
